fixed button spacing

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -15,13 +15,12 @@
 }
 
 #github-button {
-  width: 9%;
-  height: 9%;
-  padding-bottom: 35px;
+  width: 2%;
+  height: 2%;
+  padding-bottom: 2px;
 }
 
 #linkedin-button {
-  width: 10%;
-  height: 10%;
-  padding-bottom: 35px;
+  width: 2.5%;
+  height: 2.5%;
 }
